# comp4300

./: .gitignore  Assignment1.txt  Assignment2.md  CMakeLists.txt  README.md  build.sh
config/: config.txt
dependencies/: CMakeLists.txt
inc/: concepts.h  data.h  entity.h  entity_manager.h  game.h  utils.h
inc/data/: vec2.h
inc/data/components/: ccollision.h  cinput.h  clifespan.h  cscore.h  cshape.h  ctransform.h
src/: CMakeLists.txt  main.cpp
